--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cfaester/enzyme-adapter-react-18": "^0.5.1",
     "@electron/remote": "^2.0.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -11,15 +12,19 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^18.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
+    "bootstrap": "^5.1.3",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "enzyme": "^3.11.0",
+    "formik": "^2.2.9",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
