--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "electron-is-dev": "^2.0.0",
     "enzyme": "^3.11.0",
     "formik": "^2.2.9",
+    "jspdf": "^2.5.1",
+    "jszip": "^3.9.1",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "react": "^18.0.0",
@@ -29,9 +31,11 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "read-excel-file": "^5.2.28",
     "typescript": "^4.4.2",
     "wait-on": "^6.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "electron": "^18.0.3",
