--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/enzyme": "^3.10.11",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
@@ -20,6 +21,7 @@
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "enzyme": "^3.11.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "jspdf": "^2.5.1",
     "jszip": "^3.9.1",
