--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
