--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/electron-json-storage": "^4.5.0",
     "@types/enzyme": "^3.10.11",
     "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.0.1",
@@ -23,6 +24,7 @@
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "electron-json-storage": "^4.5.0",
     "enzyme": "^3.11.0",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
