--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
-  },
   "name": "report-descktop-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@cfaester/enzyme-adapter-react-18": "^0.5.1",
+    "@craco/craco": "^6.4.3",
     "@electron/remote": "^2.0.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -47,6 +43,7 @@
     "dotenv-expand": "^5.1.0",
     "electron-is-dev": "^2.0.0",
     "electron-json-storage": "^4.5.0",
+    "electron-renderer": "^2.0.4",
     "electron-settings": "^4.0.2",
     "enzyme": "^3.11.0",
     "eslint": "^8.3.0",
@@ -82,6 +79,7 @@
     "react-refresh": "^0.11.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "read-excel-file": "^5.2.28",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -108,9 +106,9 @@
   "main": "public/electron.js",
   "homepage": "./",
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
     "electron:build": "yarn build && electron-builder -c.extraMetadata.main=build/electron.js",
     "electron:start": "wait-on tcp:3000 && electron ."
